# kaeru

./: .dockerignore  .gitignore  CLAUDE.md  Cargo.toml  QUICK_START.md  README.md  brand.md  docker-compose.yaml  rustfmt.toml
.github/workflows/: build.yml
contrib/install/: install.sh  package-release.sh
contrib/opencode/: AGENTS.kaeru.md  README.md  install-opencode.sh  opencode.kaeru.json
contrib/opencode/commands/: kaeru.md  lesson.md  recall.md
docker/: Dockerfile.cloud  Dockerfile.mcp
docs/: README.md  architecture.md  curator-api.md  structure.md
kaeru-cli/: Cargo.toml
kaeru-cli/src/: format.rs  main.rs  parse.rs
kaeru-cli/src/commands/: capture.rs  consolidate.rs  hypothesis.rs  lint.rs  lookup.rs  metabolism.rs  mod.rs  review.rs  session.rs  task.rs  temporal.rs  vault.rs
kaeru-cloud/: Cargo.toml  README.md
kaeru-cloud/src/: config.rs  errors.rs  lib.rs  main.rs
kaeru-cloud/src/api/: errors.rs  extractors.rs  mod.rs  state.rs
kaeru-cloud/src/api/router/: edges.rs  health.rs  initiatives.rs  mod.rs  nodes.rs
kaeru-core/: Cargo.toml
kaeru-core/src/: config.rs  errors.rs  export.rs  export_json.rs  guard.rs  lib.rs  migrate.rs  session.rs  store.rs
kaeru-core/src/graph/: audit.rs  edge.rs  initiative.rs  mod.rs  node.rs  temporal.rs
kaeru-core/src/mutate/: chain.rs  cite.rs  consolidate.rs  edge.rs  episode.rs  hypothesis.rs  ingest.rs  initiative.rs  layer.rs  metabolism.rs  mod.rs  review.rs  sharing.rs  supersedes.rs  synthesise.rs  task.rs
kaeru-core/src/recall/: between.rs  by_name.rs  fts.rs  initiatives.rs  layered.rs  lint.rs  mod.rs  overview.rs  path.rs  recent.rs  recollect.rs  reflect.rs  summary_view.rs  tagged.rs  under_review.rs  walk.rs
kaeru-mcp/: Cargo.toml  README.md
kaeru-mcp/contrib/launchd/: ai.lamantin.kaeru-mcp.plist
kaeru-mcp/contrib/systemd/: kaeru-mcp.service
kaeru-mcp/src/: auth.rs  cloud_client.rs  main.rs  params.rs  server.rs  settings.rs  sse.rs  utils.rs  viz.rs
kaeru-mcp/src/tools/: capture.rs  chain.rs  cloud.rs  consolidate.rs  hypothesis.rs  initiative.rs  lint.rs  lookup.rs  metabolism.rs  mod.rs  review.rs  session.rs  task.rs  temporal.rs  vault.rs
kaeru-rig/: Cargo.toml
kaeru-rig/src/: capture.rs  chains.rs  cloud.rs  cloud_client.rs  evolve.rs  lib.rs  lookup.rs  manage.rs  reason.rs
kaeru-viz/: .gitignore  README.md  index.html  package-lock.json  package.json  vite.config.js
kaeru-viz/src/: fonts.css  main.js  style.css
scripts/: bake-graph-snapshot.sh
skills/kaeru-skill/: README.md  SKILL.md
