[workspace]
resolver = "2"
members = ["kaeru-core", "kaeru-mcp", "kaeru-cloud", "kaeru-rig"]

[workspace.package]
version = "0.3.0"
edition = "2024"
license = "MIT"
repository = "https://github.com/LamantinAI/kaeru"
description = "Cognitive memory layer for LLM agents — typed graph + bi-temporal substrate + curator API"
authors = ["GrumpyChubbyCat <lamantin-ai@yandex.ru>"]

[workspace.dependencies]
# Substrate. Cozo with the rocksdb storage backend explicitly enabled —
# disk-mode `Store::open(path)` opens the embedded RocksDB engine via
# `DbInstance::new("rocksdb", path, "")`. The "compact" default features
# (minimal + requests + graph-algo) stay on.
cozo = { version = "0.7", features = ["storage-rocksdb"] }

# CLI parsing
clap = { version = "4", features = ["derive", "env"] }

# Serde
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Error handling
thiserror = "2"

# Time / IDs
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v7", "serde"] }

# Config — env / file sources merged through serde
config = "0.14"

# MCP server (kaeru-mcp). Official Anthropic-maintained Rust SDK.
# Streamable HTTP transport because kaeru-mcp is a long-lived service —
# a single daemon owns the RocksDB lock; many agent sessions connect
# concurrently over `http://127.0.0.1:<port>/mcp`. Stdio is intentionally
# not available: it tied each session to its own subprocess and made
# multi-session use impossible (RocksDB is single-writer).
rmcp = { version = "1.6", features = ["server", "transport-streamable-http-server", "macros"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal", "net", "time"] }
tokio-util = "0.7"
tokio-stream = "0.1"
axum = { version = "0.8", default-features = false, features = ["http1", "tokio", "json", "query"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
schemars = "1"

# HTTP client (kaeru-mcp → kaeru-cloud). `rustls-tls` is on because the
# common topology points each local daemon at the cloud's public HTTPS
# endpoint (TLS terminated by a reverse proxy, e.g. Traefik). rustls keeps
# it self-contained — no system OpenSSL needed at build or run time. A
# plain-HTTP internal hop still works; HTTPS just also works.
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }

# Internal
kaeru-core = { path = "kaeru-core" }

[profile.release]
lto = "thin"
codegen-units = 1

# graph_builder 0.4.1 (transitive via cozo's graph-algo feature) fails to
# compile on rayon 1.10+ / rustc 1.85+ due to `into_par_iter().copied()`
# moving from `&Box<[T]>`. Fixed by `par_iter().copied()` in the lawless-m
# fork. Pinned to an exact `rev`, NOT a branch: the `fix/edgelist-par-iter`
# branch was deleted upstream, so a `branch = …` patch fails to resolve on a
# clean clone (`failed to find branch …`). A commit sha is immutable; this is
# the same commit Cargo.lock already locked. Drop the patch once the fix
# ships in a released graph_builder (see neo4j-labs/graph PR #144).
[patch.crates-io]
graph_builder = { git = "https://github.com/lawless-m/graph", rev = "790ef623533fa39574ddd11308e3abc3993c0994" }
