[package]
name = "kaeru-cloud"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "kaeru — shared cloud REST backend (Axum over kaeru-core) for the local/cloud memory split"
repository.workspace = true

[[bin]]
name = "kaeru-cloud"
path = "src/main.rs"

[dependencies]
kaeru-core.workspace = true
axum.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
serde.workspace = true
serde_json.workspace = true
config.workspace = true
thiserror.workspace = true
